Remove duplicate stylesheet link and fix typos
Fixed duplicated stylesheet link and corrected 'conctacto' spelling in the footer and form header.

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ Mi objetivo es convertirme en un Desarrollador de Aplicaciones Multiplataforma c
     </header>
     <form method="post" action="/">
         <fieldset>
-            <h5 id="conctacto">Formulario de conctacto</h5>
+            <h5 id="conctacto">Formulario de contacto</h5>
             <legend>Informacion personal</legend>
         
             <div>
@@ -101,4 +101,5 @@ Mi objetivo es convertirme en un Desarrollador de Aplicaciones Multiplataforma c
     <footer>
         <p>Copyriht &copy; stevan jaramillo 2025</p>
 </body>
+
 </html>
