Fix HTML structure and correct typos

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ Mi objetivo es convertirme en un Desarrollador de Aplicaciones Multiplataforma c
     
     <section class="conctacto">
     <header>
-        <h4>conctacto</h4>
+        <h4>contacto</h4>
     </header>
     <form method="post" action="/">
         <fieldset>
@@ -103,3 +103,4 @@ Mi objetivo es convertirme en un Desarrollador de Aplicaciones Multiplataforma c
 </body>
 
 </html>
+
